# MarkItDownGUI

./: .gitignore  Deploy.ps1  README.md  main.py  pyproject.toml
.github/workflows/: release.yml
